[package]
name = "include-exclude-watcher"
version = "0.1.0"
edition = "2021"
authors = ["Frank van Viegen <frank@vanviegen.net>"]
description = "Async file watcher with glob-based include/exclude patterns and built-in debouncing"
license = "MIT"
repository = "https://github.com/vanviegen/include-exclude-watcher"
documentation = "https://docs.rs/include-exclude-watcher"
readme = "README.md"
keywords = ["file-watcher", "inotify", "glob", "async", "tokio"]
categories = ["filesystem", "asynchronous"]
rust-version = "1.70"

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time", "net", "macros"] }
anyhow = "1.0"
libc = { version = "0.2", default-features = false }
glob = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "iow"
path = "src/bin/iow.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap", "tokio/rt-multi-thread"]

[dependencies.clap]
version = "4.5"
features = ["derive"]
optional = true
